[tool.poetry]
name = "ptonppl"
version = "0.0.3"
description = "An integration package to lookup Princeton campus users."
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/jlumbroso/ptonppl"
repository = "https://github.com/jlumbroso/ptonppl"
include = [
    "README.md",
]
keywords = [
    "Princeton",
    "directory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
python-ldap = "^3.3.1"
backoff = "^1.10.0"
requests = "^2.24.0"
bs4 = "^0.0.1"
click = "^7.1.2"
click_help_colors = "^0.8"
click-option-group = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
ptonppl = "ptonppl.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
