[tool.poetry]
name = "ptonppl"
version = "1.0.2"
description = "An integration package to lookup Princeton campus users."
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/jlumbroso/ptonppl"
repository = "https://github.com/jlumbroso/ptonppl"
include = [
    "README.md",
]
keywords = [
    "Princeton",
    "directory",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
python-ldap = "^3.3.1"          # Python Software Foundation License (Python style) (as of 2020-10-20)
backoff = "^1.10.0"             # MIT License (as of 2020-09-29)
requests = "^2.24.0"            # Apache Software License (Apache 2.0) (as of 2020-09-29)
bs4 = "^0.0.1"                  # MIT License (as of 2020-10-20)
click = "^7.1.2"                # BSD License (as of 2020-09-29)
click_help_colors = "^0.8"      # MIT License (as of 2020-09-29)
click-option-group = "^0.5.1"   # BSD License (as of 2020-09-29)

[tool.poetry.dev-dependencies]
pytest = "^5.2"                 # MIT License (as of 2020-09-29)

[tool.poetry.scripts]
ptonppl = "ptonppl.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
